<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="@color/ivory"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/black22"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/reg_back_view"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView 
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:src="@drawable/left" />

        </LinearLayout> 
         <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            
             <TextView 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:textColor="@color/white"
                 android:textSize="18dp"
                 android:text="@string/reg_title"/>
             
        </LinearLayout> 
    </LinearLayout>
    
    <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginTop="10dp" 
         android:background="@color/white"
         android:orientation="horizontal">
         
          <EditText 
              android:id="@+id/reg_class_edit"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"  
              android:maxLength="20"
              android:background="@null"
              android:hint="@string/reg_class"
              android:textSize="14dp"  
              android:textColor="@color/black33" 
              android:textColorHint="@color/black33"/>
         
     </LinearLayout>
     
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginTop="10dp" 
         android:background="@color/white"
         android:orientation="horizontal">
         
          <EditText 
              android:id="@+id/reg_name_edit"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"
              android:maxLength="20" 
              android:background="@null"
              android:hint="@string/reg_name"
              android:textSize="14dp"  
              android:textColor="@color/black33" 
              android:textColorHint="@color/black33"/>
         
     </LinearLayout>
     
      <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginTop="10dp" 
         android:background="@color/white"
         android:orientation="horizontal">
         
          <EditText 
              android:id="@+id/reg_studenid_edit"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"
              android:maxLength="24" 
              android:background="@null"
              android:hint="@string/reg_stduentid"
              android:textSize="14dp"
              android:inputType="number"
              android:digits="0123456789"
              android:textColor="@color/black33" 
              android:textColorHint="@color/black33"/>
         
     </LinearLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginTop="10dp" 
         android:background="@color/white"
         android:orientation="horizontal">
         
          <EditText 
              android:id="@+id/reg_parent_edit"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"
              android:maxLength="20" 
              android:background="@null"
              android:hint="@string/reg_parent"
              android:textSize="14dp"  
              android:textColor="@color/black33" 
              android:textColorHint="@color/black33"/>
         
     </LinearLayout>
     
      <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginTop="10dp" 
         android:background="@color/white"
         android:orientation="horizontal">
         
          <EditText 
              android:id="@+id/reg_phone_edit"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_vertical"
              android:maxLength="20" 
              android:background="@null"
              android:hint="@string/reg_phone"
              android:textSize="14dp"  
              android:textColor="@color/black33" 
              android:textColorHint="@color/black33"/>
         
     </LinearLayout>
     
       <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="100dp" 
         android:gravity="center"
         android:orientation="vertical">
         
          <Button
              android:id="@+id/reg_button"
              android:layout_width="240dp"
              android:layout_height="42dp"
              android:textSize="20dp"
              android:textColor="@color/white"
              android:text="@string/reg_button"
              android:background="@drawable/button_style"/>
           
         
     </LinearLayout>
    

</LinearLayout>
